Fixed ImGUI drawing (removed conditional for updating vertex buffer data), still need to find another way of doing this properly

--- a/Ravine/bin/x64/imgui.ini
+++ b/Ravine/bin/x64/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][ImGui Demo]
-Pos=651,20
+Pos=585,267
 Size=550,680
 Collapsed=0
 
@@ -21,5 +21,10 @@ Collapsed=0
 [Window][Example settings]
 Pos=78,76
 Size=200,200
+Collapsed=0
+
+[Window][Example: Long text display]
+Pos=60,60
+Size=520,600
 Collapsed=0
 
