Changed CRC32 to work with char pointer and changed from uint_fast32_t to uint32_t (for better compatibility), also changed from std::accumulate to a common for loop. Used CRC32 to check ImGUI buffer changes and only update changes to GPU when necessary. Also added VK_BUFFER_USAGE_TRANSFER_DST_BIT to every create persistent buffer call (as they will always be TRANSFER destinations).

--- a/Ravine/Ravine.vcxproj
+++ b/Ravine/Ravine.vcxproj
@@ -158,7 +158,7 @@
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="crc32.cpp" />
+    <ClCompile Include="crc32.h" />
     <ClCompile Include="imgui.cpp" />
     <ClCompile Include="imgui_demo.cpp" />
     <ClCompile Include="imgui_draw.cpp" />
