--- a/Ravine/bin/x64/imgui.ini
+++ b/Ravine/bin/x64/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][ImGui Demo]
-Pos=867,345
+Pos=1078,303
 Size=513,580
 Collapsed=0
 
@@ -26,5 +26,10 @@ Collapsed=0
 [Window][Example: Long text display]
 Pos=60,60
 Size=520,600
+Collapsed=0
+
+[Window][Style Editor]
+Pos=60,60
+Size=339,225
 Collapsed=0
 
