--- a/Ravine/Ravine.vcxproj
+++ b/Ravine/Ravine.vcxproj
@@ -173,7 +173,7 @@
     <ClCompile Include="RvDynamicBuffer.cpp" />
     <ClCompile Include="RvGUI.cpp" />
     <ClCompile Include="RvGUIPipeline.cpp" />
-    <ClCompile Include="RvLinePipeline.cpp" />
+    <ClCompile Include="RvWireframePipeline.cpp" />
     <ClCompile Include="RvTexture.cpp" />
     <ClCompile Include="RvPersistentBuffer.cpp" />
     <ClCompile Include="RvConfig.cpp" />
@@ -198,7 +198,7 @@
     <ClInclude Include="RvDynamicBuffer.h" />
     <ClInclude Include="RvGUI.h" />
     <ClInclude Include="RvGUIPipeline.h" />
-    <ClInclude Include="RvLinePipeline.h" />
+    <ClInclude Include="RvWireframePipeline.h" />
     <ClInclude Include="RvTexture.h" />
     <ClInclude Include="RvPersistentBuffer.h" />
     <ClInclude Include="RvConfig.h" />
@@ -218,8 +218,9 @@
     <None Include="bin\data\shaders\gui.frag" />
     <None Include="bin\data\shaders\gui.vert" />
     <None Include="bin\data\shaders\phong_tex_color.frag" />
-    <None Include="bin\data\shaders\skinned_debug_wireframe.vert" />
+    <None Include="bin\data\shaders\skinned_wireframe.vert" />
     <None Include="bin\data\shaders\skinned_tex_color.vert" />
+    <None Include="bin\data\shaders\solid_color.frag" />
     <None Include="bin\data\shaders\static_tex_color.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
