Separated Model matrix from Global Uniform Descriptor set and defined the bindings for it on the Model set, integrated ShaderC to compile shaders at realtime, deleted all the spir-v compiler binnaries, changed shaderc linking to be dynamic instead of static, updated shaders to use new Uniform Structures.

--- a/Ravine/Ravine.vcxproj.filters
+++ b/Ravine/Ravine.vcxproj.filters
@@ -69,9 +69,6 @@
     <ClCompile Include="imgui.cpp">
       <Filter>Header Files\ImGUI</Filter>
     </ClCompile>
-    <ClCompile Include="crc32.h">
-      <Filter>Header Files\Ravine System</Filter>
-    </ClCompile>
     <ClCompile Include="RvAnimationTools.cpp">
       <Filter>Source Files\Ravine System</Filter>
     </ClCompile>
@@ -119,6 +116,9 @@
     </ClCompile>
     <ClCompile Include="SingleFileLibraries\spirv_reflect.c">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="crc32.hpp">
+      <Filter>Header Files\Ravine System</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
