--- a/Ravine/Ravine.vcxproj
+++ b/Ravine/Ravine.vcxproj
@@ -92,7 +92,7 @@
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>..\lib\x86\;..\lib\x86\Debug\;</AdditionalLibraryDirectories>
-      <AdditionalDependencies>vulkan-1.lib;EASTL.lib;EAStdC.lib;fmt.lib;assimp32.lib;glfw3.lib;glm_static.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>vulkan-1.lib;EASTL.lib;EAStdC.lib;fmt.lib;shaderc_shared.lib;assimp32.lib;glfw3.lib;glm_static.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PreBuildEvent>
       <Command>$(OutDir)\..\data\shaders\convert.bat</Command>
@@ -109,7 +109,7 @@
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>..\lib\x64\;..\lib\x64\Debug\;</AdditionalLibraryDirectories>
-      <AdditionalDependencies>vulkan-1.lib;EASTL.lib;EAStdC.lib;fmt.lib;assimp64.lib;glfw3.lib;glm_static.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>vulkan-1.lib;EASTL.lib;EAStdC.lib;fmt.lib;shaderc_shared.lib;assimp64.lib;glfw3.lib;glm_static.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PreBuildEvent>
       <Command>$(OutDir)\..\data\shaders\convert.bat</Command>
@@ -130,7 +130,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>..\lib\x86\;..\lib\x86\Release\;</AdditionalLibraryDirectories>
-      <AdditionalDependencies>vulkan-1.lib;EASTL.lib;EAStdC.lib;fmt.lib;assimp32.lib;glfw3.lib;glm_static.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>vulkan-1.lib;EASTL.lib;EAStdC.lib;fmt.lib;shaderc_shared.lib;assimp32.lib;glfw3.lib;glm_static.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <Profile>true</Profile>
     </Link>
     <PreBuildEvent>
@@ -152,7 +152,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>..\lib\x64\;..\lib\x64\Release\;</AdditionalLibraryDirectories>
-      <AdditionalDependencies>vulkan-1.lib;EASTL.lib;EAStdC.lib;fmt.lib;assimp64.lib;glfw3.lib;glm_static.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>vulkan-1.lib;EASTL.lib;EAStdC.lib;fmt.lib;shaderc_shared.lib;assimp64.lib;glfw3.lib;glm_static.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <Profile>true</Profile>
     </Link>
     <PreBuildEvent>
@@ -160,7 +160,7 @@
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="crc32.h" />
+    <ClCompile Include="crc32.hpp" />
     <ClCompile Include="EASTL_new.cpp" />
     <ClCompile Include="imgui.cpp" />
     <ClCompile Include="imgui_demo.cpp" />
