General changes on includes and nomenclatures, deleted old .exe files, started implementing ImGUI toolbar, changed DynamicBuffers to have default VK_NULL_HANDLER values.

--- a/Ravine/bin/x64/imgui.ini
+++ b/Ravine/bin/x64/imgui.ini
@@ -3,33 +3,8 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][ImGui Demo]
-Pos=100,104
-Size=419,656
-Collapsed=0
-
-[Window][Hello, world!]
-Pos=140,62
-Size=362,212
-Collapsed=0
-
-[Window][Another Window]
-Pos=60,60
-Size=197,71
-Collapsed=0
-
-[Window][Example settings]
-Pos=78,76
-Size=200,200
-Collapsed=0
-
-[Window][Example: Long text display]
-Pos=60,60
-Size=520,600
-Collapsed=0
-
-[Window][Style Editor]
-Pos=60,60
-Size=339,225
+[Window][Graphics Pipeline]
+Pos=64,56
+Size=380,352
 Collapsed=0
 
